--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-joy-boilerplate-api",
+  "name": "nestjs-boilerplate-api",
   "version": "0.0.1",
   "description": "",
   "author": "",
